--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<iframe src="https://lichess.org/embed/8SUSY6hB#16?theme=auto&bg=auto"
+<iframe src="https://lichess.org/embed/8SUSY6hB#16?theme=blue&bg=dark"
         width=600 height=397 frameborder=0></iframe>
