--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
    <head><title>Chess Archive</title></head> 
    <body>
-      <iframe src="https://lichess.org/embed/8SUSY6hB?#16theme=green&bg=dark"
+      <iframe src="https://lichess.org/embed/8SUSY6hB?theme=blue&bg=dark"
         width=600 height=397 frameborder=3></iframe>
    </body> 
-</html> 
+</html>
