--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html> 
-   <head><title>Chess Archive</title></head> 
+   <head>
+      <title>Chess Archive</title>
+      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+   </head> 
    <body>
       <iframe src="https://lichess.org/embed/8SUSY6hB?theme=blue&bg=dark"
         width=600 height=397 frameborder=3></iframe>
