--- a/index.html
+++ b/index.html
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
-<html> 
-   <head>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<html>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/flatly/bootstrap.min.css"
+          integrity="sha384-qF/QmIAj5ZaYFAeQcrQ6bfVMAh4zZlrGwTPY7T/M+iTTLJqJBJjwwnsE5Y0mV7QK" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-      <title>Chess Archive</title>
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-   </head> 
-   <body>
-      <iframe src="https://lichess.org/embed/8SUSY6hB?theme=blue&bg=dark"
-        width=600 height=397 frameborder=3></iframe>
-   </body> 
+    <title>Chess Archive</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body style="background-color: hsl(210, 15%, 35%);">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Chess Archive</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+            aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home
+                    <span class="sr-only">(current)</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sicilian</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Kings Indian</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Queens Gambit</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Evans Gambit</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">London Game</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Tal moves</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                   aria-expanded="false">Accounts</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="https://lichess.org/@/eatingsomebagels">lichess</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="https://www.chess.com/stats/live/blitz/eatingsomebagels">chess.com -
+                        main</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="https://www.chess.com/stats/live/rapid/worstbehaviorpawn">chess.com -
+                        worst behaviour</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<iframe src="https://lichess.org/embed/8SUSY6hB?theme=blue&bg=dark"
+        width=600 height=397 style="border: black"></iframe>
+<div>
+    <span class="badge badge-primary">Black</span>
+    <span class="badge badge-primary">Kings Indian</span>
+    <span class="badge badge-primary">Quick Mate</span>
+</div>
+</body>
 </html>
