--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
                 <a class="nav-link" href="#">London Game</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Tal moves</a>
+                <a class="nav-link" href="#">Tal Moves</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
                    aria-expanded="false">Accounts</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="https://lichess.org/@/eatingsomebagels">lichess</a>
+                    <a class="dropdown-item" target="_blank" href="https://lichess.org/@/eatingsomebagels">Lichess</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="https://www.chess.com/member/eatingsomebagels">chess.com -
-                        main</a>
+                    <a class="dropdown-item" target="_blank" href="https://www.chess.com/member/eatingsomebagels">Chess.com -
+                        Main</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="https://www.chess.com/member/worstbehaviorpawn">chess.com -
-                        worst behaviour</a>
+                    <a class="dropdown-item" target="_blank" href="https://www.chess.com/member/worstbehaviorpawn">Chess.com -
+                        Worst Behaviour</a>
                 </div>
             </li>
         </ul>
