--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="#">Evans Gambit</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">London Game</a>
+                <a class="nav-link" href="#">Scotch Game</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Tal Moves</a>
