--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="#">Scotch Game</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Tal Moves</a>
+                <a class="nav-link" href="#">Pure Aggression</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
@@ -94,7 +94,7 @@
         </div>
         <div class="col-4">
             <div class="block">
-                <iframe src="https://lichess.org/embed/8SUSY6hB?theme=blue&bg=dark"
+                <iframe src="https://lichess.org/embed/E9bPdqWr#41?theme=blue&bg=dark"
                         width=600 height=397 style="border: black"></iframe>
                 <div>
                     <span class="badge badge-primary">Black</span>
@@ -108,9 +108,9 @@
                 <iframe src="https://lichess.org/embed/8SUSY6hB?theme=blue&bg=dark"
                         width=600 height=397 style="border: black"></iframe>
                 <div>
-                    <span class="badge badge-primary">Black</span>
-                    <span class="badge badge-primary">Kings Indian</span>
-                    <span class="badge badge-primary">Quick Mate</span>
+                    <span class="badge badge-primary">White</span>
+                    <span class="badge badge-primary">Pure Aggression</span>
+                    <span class="badge badge-primary">Many Blunders</span>
                 </div>
             </div>
         </div>
