--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
         </div>
         <div class="col-4">
             <div class="block">
-                <iframe src="https://lichess.org/embed/E9bPdqWr#41?theme=blue&bg=dark"
+                <iframe src="https://lichess.org/embed/E9bPdqWr#0?theme=blue&bg=dark"
                         width=600 height=397 style="border: black"></iframe>
                 <div>
-                    <span class="badge badge-primary">Black</span>
-                    <span class="badge badge-primary">Kings Indian</span>
-                    <span class="badge badge-primary">Quick Mate</span>
+                    <span class="badge badge-primary">White</span>
+                    <span class="badge badge-primary">Pure Aggression</span>
+                    <span class="badge badge-primary">Many Blunders</span>
                 </div>
             </div>
         </div>
