--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="col-4">
             <div class="block">
-                <iframe src="https://lichess.org/embed/E9bPdqWr#0?theme=blue&bg=dark"
+                <iframe src="https://lichess.org/embed/E9bPdqWr?theme=blue&bg=dark"
                         width=600 height=397 style="border: black"></iframe>
                 <div>
                     <span class="badge badge-primary">White</span>
