--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     <div class="row">
         <div class="col-4">
             <div class="block">
-                <iframe src="https://lichess.org/embed/8SUSY6hB?theme=blue&bg=dark"
+                <iframe src="https://lichess.org/embed/dMjdukyO?theme=blue&bg=dark"
                         width=600 height=397 style="border: black"></iframe>
                 <div>
                     <span class="badge badge-primary">Black</span>
