--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
                 <iframe src="https://lichess.org/embed/dMjdukyO?theme=blue&bg=dark"
                         width=600 height=397 style="border: black"></iframe>
                 <div>
-                    <span class="badge badge-primary">Black</span>
-                    <span class="badge badge-dark">Kings Indian</span>
-                    <span class="badge badge-success">Quick Mate</span>
+                    <span class="badge badge-light">White</span>
+                    <span class="badge badge-dark">Pure Aggression</span>
+                    <span class="badge badge-success">Tactics</span>
                 </div>
             </div>
         </div>
